@@ -66,7 +66,11 @@ thanks to:
 	Toni Fiz
 	Seketeli Apelete
 	Cristiano Canguçu
+	Adolfo González Blázquez
+	Marc E.
+	Tobias Kral
 	Hanno Böck
+	
 	
 
 
