@@ -456,6 +456,10 @@ Thanks to:
         Toni Fiz
         Seketeli Apelete
         Cristiano Canguçu
+	Cristiano Canguçu
+	Adolfo González Blázquez
+	Marc E.
+	Tobias Kral
 	Hanno Böck
 </property>
   <property name="documenters">No documentation written.</property>
@@ -1189,6 +1193,69 @@ track_title
 			  <property name="add_tearoffs">False</property>
 			  <property name="focus_on_click">True</property>
 			  <signal name="changed" handler="on_basename_pattern_changed" last_modification_time="Sun, 06 Mar 2005 01:50:28 GMT"/>
+			</widget>
+			<packing>
+			  <property name="padding">0</property>
+			  <property name="expand">False</property>
+			  <property name="fill">True</property>
+			</packing>
+		      </child>
+
+		      <child>
+			<widget class="GtkHBox" id="custom_filename_box">
+			  <property name="visible">True</property>
+			  <property name="homogeneous">False</property>
+			  <property name="spacing">4</property>
+
+			  <child>
+			    <widget class="GtkLabel" id="label34">
+			      <property name="visible">True</property>
+			      <property name="label" translatable="yes">Filename pattern: </property>
+			      <property name="use_underline">False</property>
+			      <property name="use_markup">False</property>
+			      <property name="justify">GTK_JUSTIFY_LEFT</property>
+			      <property name="wrap">False</property>
+			      <property name="selectable">False</property>
+			      <property name="xalign">0</property>
+			      <property name="yalign">0.5</property>
+			      <property name="xpad">0</property>
+			      <property name="ypad">0</property>
+			      <property name="ellipsize">PANGO_ELLIPSIZE_NONE</property>
+			      <property name="width_chars">-1</property>
+			      <property name="single_line_mode">False</property>
+			      <property name="angle">0</property>
+			    </widget>
+			    <packing>
+			      <property name="padding">0</property>
+			      <property name="expand">False</property>
+			      <property name="fill">False</property>
+			    </packing>
+			  </child>
+
+			  <child>
+			    <widget class="GtkEntry" id="custom_filename">
+			      <property name="visible">True</property>
+			      <property name="tooltip" translatable="yes">{Artist}: Artist name
+{Album}: Album name
+{Title}: Song title
+{Track}: Track number
+{Total}: Total number of tracks in album</property>
+			      <property name="can_focus">True</property>
+			      <property name="editable">True</property>
+			      <property name="visibility">True</property>
+			      <property name="max_length">0</property>
+			      <property name="text" translatable="yes"></property>
+			      <property name="has_frame">True</property>
+			      <property name="invisible_char">●</property>
+			      <property name="activates_default">False</property>
+			      <signal name="changed" handler="on_custom_filename_changed" last_modification_time="Fri, 26 May 2006 11:42:33 GMT"/>
+			    </widget>
+			    <packing>
+			      <property name="padding">0</property>
+			      <property name="expand">True</property>
+			      <property name="fill">True</property>
+			    </packing>
+			  </child>
 			</widget>
 			<packing>
 			  <property name="padding">0</property>
